<resources>
    <string name="app_name">InventaryAndOrderBooking</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_wholesaler_home">Wholesaler_home</string>
    <string name="title_activity_add_shopkeepers">add_shopkeepers</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="title_activity_add">add</string>
    <string name="title_activity_shopkeepers_biodata">Shopkeepers_biodata</string>
    <string name="title_activity_account_settings">Account_settings</string>
    <string name="title_activity_products">Products</string>
    <string name="title_activity_products_biodata">Products_biodata</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="todo">TODO</string>
    <string name="no_image">no Image</string>
    <string-array name="numbers">
        <item>Pcs</item>
        <item>Kg</item>
        <item>Leter</item>
        <item>Meter</item>
        <item>Pack</item>
    </string-array>
    <string name="title_activity_shopkeeper_home">Shopkeeper_home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
